--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,8 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "^4.0.3",
-    "web3": "^1.7.3"
+    "web3": "^1.0.0=beta.18",
+    "web3-utils": "^1.7.4"
   },
   "scripts": {
     "start": "react-scripts start",
